corrected blogs to publications

--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
                 <div class="col-xs-12 col-sm-12 col-md-4" data-aos="fade-right" data-aos-duration="1200" data-aos-easing="ease-in-out">
                     <a href="./blogs.html"><img loading="lazy" class="project-blog grow" src="./img/blogs.png"></a>
                     <a href="./blogs.html">
-                        <h3 class="project-blog-headings">Blogs</h3>
+                        <h3 class="project-blog-headings">Publications</h3>
                     </a>
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-4" data-aos="fade-right" data-aos-duration="1200" data-aos-easing="ease-in-out">
