--- a/public/index.html
+++ b/public/index.html
@@ -197,17 +197,20 @@
                 </div>
                 <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left" data-aos-duration="1200" data-aos-easing="ease-in-out">
                     <h3>Profile </h3>
-                    <p>I'm Pranjay Poddar, A third-year undergraduate student pursuing BTECH in CSE with a specialisation in cloud computing from SRM Institute Of Science And Technology, KTR-Chennai.
-                        <br>
-                        <br> I am a full-stack Web developer, Graphic Designer, UI/UX developer, Data Science/AI and Cloud Computing enthusiast. I like to work on projects associated with the web development domain by using a wide range of resources available
-                        on various data-sharing platforms.
-                        <br><br>I cherish collaborations on Github with people having interests in the following domains :</p>
+                    <p>I'm a final year undergraduate student pursuing BTECH in CSE with a specialization in Cloud Computing. I love developing websites, web apps and have a keen interest in full-stack and software development. I'm passionate about open source development, web development, web designing, data structures & algorithms, competitive programming and graphic designing.</p>
+                        
+                     <ul> <li> Resourceful, high-energy software professional offering over 4 years of expertise in the Open Source domain.</li>
+                            <li> Successfully led complex projects with small and large teams, covering various aspects of software development, process and methodology at SRM University @Webarch Club.</li>
+                            <li> Have experience in Object-Oriented design and development,CPP, Java, Angular, Spring boot, , middleware and enterprise application architecture and implementation.</li>
+                            <li> Dedicated, hardworking individual with the intercommunication skills to work at all levels of the organization.</li>
+                            <li> Successful in meeting new technical challenges and finding solutions to meet the needs of the customer.</li></ul>
+                        <p>I cherish collaborations on Github with people having interests in the following domains :</p>
                     <div class="row" id="list">
                         <div class="col-lg-6">
                             <ul>
                                 <li> Web Development</li>
                                 <li> Graphic Designing</li>
-                                <li> UI/UX Development</li>
+                                <li> Software Development</li>
                             </ul>
                         </div>
                         <div class="col-lg-6">
@@ -237,7 +240,7 @@
                             <ul>
                                 <li>Computer Science And Engineering</li>
                                 <li>Specialisation In Cloud Computing</li>
-                                <li>CGPA: 9.7</li>
+                                <li>CGPA: 9.45</li>
                             </ul>
                         </p>
                     </div>
@@ -376,39 +379,53 @@
 
                 <div class="row">
                     <div class="col-lg-12">
-                        <h3 class='experience-title text-center'>Internship Experience</h3>
                         <div class="row">
-                            <div class="col-lg-4" data-aos="fade-right" data-aos-duration="1200" data-aos-easing="ease-in-out">
+                            <div class="col-lg-3" data-aos="fade-right" data-aos-duration="1200" data-aos-easing="ease-in-out">
                                 <div class="experience-item">
                                     <h4>PayPal</h4>
-                                    <p>SDE-1 Intern</p>
+                                    <p >Software Engineer-1</p>
                                     <br>
-                                    <h5>July-Present</h5>
+                                    <h5>Jul,2023-Present</h5>
+                                    <br><br>
+                                    <p>Software Engineer Intern</p>
                                     <br>
-                                    <img loading="lazy" src="./img/paypal.png" height="130px" width="250px" style="margin-bottom: 10%;">
+                                    <h5>Jul,2022-Jan 2023</h5>
+                                    <br><br>
+                                    <img loading="lazy" src="./img/paypal.png" height="90px" width="180px" style="margin-bottom: 10%;">
                                 </div>
                             </div>
-                            <div class="col-lg-4" data-aos="fade-up" data-aos-duration="1200" data-aos-easing="ease-in-out">
+                            <div class="col-lg-3" data-aos="fade-up" data-aos-duration="1200" data-aos-easing="ease-in-out">
                                 <div class="experience-item">
-                                    <h4>Highradius Winter Intern</h4>
-                                    <p>Highway to Highradius Tech Track</p>
+                                    <h4>HyperVerge</h4>
+                                    <p>Software Engineer Intern</p>
                                     <br>
-                                    <h5>February,2022-Present</h5>
+                                    <h5>Mar,2023-Jun 2023</h5>
                                     <br>
-                                    <img loading="lazy" src="./img/high-radius.png" height="70px" width="250px" style="margin-bottom: 10%;">
+                                    <img loading="lazy" src="./img/hyperverge.png" height="90px" width="160px" style="margin-top: 10%;">
                                 </div>
+                                <br>
                             </div>
-
-                            <div class="col-lg-4" data-aos="fade-left" data-aos-duration="1200" data-aos-easing="ease-in-out">
+                            <div class="col-lg-3" data-aos="fade-up" data-aos-duration="1200" data-aos-easing="ease-in-out">
+                                <div class="experience-item ">
+                                    <h4>Highradius</h4>
+                                    <p>SDE Intern in Highway to Highradius Tech Track</p>
+                                    <br>
+                                    <h5>Jan,2022-Apr 2022</h5>
+                                    <br>
+                                    <img loading="lazy" src="./img/high-radius.png" height="50px" width="200px" style="margin-top: 10%;">
+                                </div>
+                                <br>
+                            </div>
+                            <div class="col-lg-3" data-aos="fade-left" data-aos-duration="1200" data-aos-easing="ease-in-out">
                                 <div class="experience-item">
                                     <h4>Inception Wave Pvt. Ltd</h4>
                                     <p>Full Stack Development Intern</p>
                                     <br>
-                                    <h5>January,2021-March,2021</h5>
+                                    <h5>Jan,2021-Mar,2021</h5>
                                     <p class="experience-item">Graphic Design Intern</p>
-                                    <h5>April,2021-May,2021</h5>
-                                    <br>
-                                    <a href="https://www.linkedin.com/company/inception-wave-student-chapter/mycompany/"><img loading="lazy" src="./img/inception_wave.png" class="grow" height="100px" width="100px"></a>
+                                    <h5>Apr,2021-May,2021</h5>
+                                    <br><br>
+                                    <a href="https://www.linkedin.com/company/inception-wave-student-chapter/mycompany/" ><img loading="lazy" src="./img/inception_wave.png" class="grow" height="100px" width="100px"></a>
                                 </div>
                             </div>
                         </div>
@@ -505,7 +522,7 @@
 
                     </div>
                     <div class="experience-item">
-                        <h4>Hacktoberfest'21</h4>
+                        <h4>Hacktoberfest 2021 & 2022</h4>
                         <h5>October,2021</h5>
                         <p><i class="fas fa-caret-right"></i>Maintainer & Contributor</p>
 
@@ -529,7 +546,7 @@
                 <div class="col-xs-12 col-sm-12 col-md-4" data-aos="fade-right" data-aos-duration="1200" data-aos-easing="ease-in-out">
                     <a href="./blogs.html"><img loading="lazy" class="project-blog grow" src="./img/blogs.png"></a>
                     <a href="./blogs.html">
-                        <h3 class="project-blog-headings">Blogs</h3>
+                        <h3 class="project-blog-headings">Publications</h3>
                     </a>
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-4" data-aos="fade-right" data-aos-duration="1200" data-aos-easing="ease-in-out">
@@ -556,7 +573,7 @@
                     <div class="info-box">
                         <a href="https://goo.gl/maps/MGEcq4aKYyjk7RnaA" target="_blank"> <i class="fas fa-map-marked-alt"></i>
                             <h3>Address</h3>
-                            <p>Chennai Tamil Nadu, India</p>
+                            <p>Jabalpur Madhya Pradesh, India</p>
                         </a>
                     </div>
                 </div>
@@ -627,7 +644,7 @@
 
         </a>
         <div class="container">
-            <h4 style="text-align: center; ">&copy2021 <span id="credit">Pranjay Poddar</span></h4>
+            <h4 style="text-align: center; ">&copy2023 <span id="credit">Pranjay Poddar</span></h4>
         </div>
     </section>
 
