updated the content

--- a/public/index.html
+++ b/public/index.html
@@ -201,7 +201,7 @@
                         
                      <ul> <li> Resourceful, high-energy software professional offering over 4 years of expertise in the Open Source domain.</li>
                             <li> Successfully led complex projects with small and large teams, covering various aspects of software development, process and methodology at SRM University @Webarch Club.</li>
-                            <li> Have experience in Object-Oriented design and development,CPP, Java, Angular, Spring boot, , middleware and enterprise application architecture and implementation.</li>
+                            <li> Have experience in Object-Oriented design and development,CPP, Java, Angular, Spring boot, middleware and enterprise application architecture and implementation.</li>
                             <li> Dedicated, hardworking individual with the intercommunication skills to work at all levels of the organization.</li>
                             <li> Successful in meeting new technical challenges and finding solutions to meet the needs of the customer.</li></ul>
                         <p>I cherish collaborations on Github with people having interests in the following domains :</p>
