--- a/index.html
+++ b/index.html
@@ -581,21 +581,21 @@
         <div classs="container-fluid ">
             <div class="row text-center cat">
                 <div class="col-xs-12 col-sm-12 col-md-4" data-aos="fade-right" data-aos-duration="1200" data-aos-easing="ease-in-out">
-                    <a href="./projects.html"><img loading="lazy" class="project-blog grow" src="./img/projects.png"></a>
+                    <a href="./projects.html"><img loading="lazy" class="project-blog grow" src="./img/projects.png"></a><br><br>
                     <a href="./projects.html">
-                        <h3 class="project-blog-headings">Projects</h3>
+                        <button type="button" class="btn btn-secondary btn-lg">Projects</button>
                     </a>
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-4" data-aos="fade-right" data-aos-duration="1200" data-aos-easing="ease-in-out">
-                    <a href="./blogs.html"><img loading="lazy" class="project-blog grow" src="./img/blogs.png"></a>
+                    <a href="./blogs.html"><img loading="lazy" class="project-blog grow" src="./img/blogs.png"></a><br><br>
                     <a href="./blogs.html">
-                        <h3 class="project-blog-headings">Publications</h3>
+                        <button type="button" class="btn btn-secondary btn-lg">Publications</button>
                     </a>
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-4" data-aos="fade-right" data-aos-duration="1200" data-aos-easing="ease-in-out">
-                    <a href="https://pranjay-graphics.netlify.app/" target="_blank"><img loading="lazy" class="project-blog grow" src="./img/graphics.png"></a>
+                    <a href="https://pranjay-graphics.netlify.app/" target="_blank"><img loading="lazy" class="project-blog grow" src="./img/graphics.png"></a><br><br>
                     <a href="https://pranjay-graphics.netlify.app/" target="_blank">
-                        <h3 class="project-blog-headings">Graphic Designs</h3>
+                        <button type="button" class="btn btn-secondary btn-lg">Graphic Designs</button>
                     </a>
                 </div>
             </div>
