updated the dates of activities and socities

--- a/index.html
+++ b/index.html
@@ -485,19 +485,19 @@
                     <h3 class='experience-title'>Technical Experience</h3>
                     <div class="experience-item">
                         <h4>Front-end Developer</h4>
-                        <h5>July,2021-Present</h5>
+                        <h5>July,2021-April,2023</h5>
                         <p><i class="fas fa-caret-right"></i>Directorate Of Alumni Affairs SRM</p>
                         <p>Working with DAA SRM as a front-end Developer.</p>
                     </div>
                     <div class="experience-item">
                         <h4>Full Stack Developer</h4>
-                        <h5>Oct,2020-Present</h5>
+                        <h5>Oct,2020-April,2023</h5>
                         <p><i class="fas fa-caret-right"></i>Inception Wave Student Chapter SRM</p>
                         <p>Working with IWSC SRM as a front-end web developer.</p>
                     </div>
                     <div class="experience-item">
                         <h4>Secretary</h4>
-                        <h5>Feb,2020-Present</h5>
+                        <h5>Feb,2020-April,2023</h5>
                         <p><i class="fas fa-caret-right"></i>WEBARCH CLUB SRM</p>
                         <p>Working with Webarch Club as a Web developer and Graphic Designer.</p>
                     </div>
@@ -519,13 +519,13 @@
                     <h3 class='experience-title'>Non-Tech Experience</h3>
                     <div class="experience-item">
                         <h4>Committee Member</h4>
-                        <h5>September,2019-Present</h5>
+                        <h5>September,2019-April,2023</h5>
                         <p><i class="fas fa-caret-right"></i>AARUUSH-Tech Festival</p>
                         <p>Member of an organizing committee and workshop committee in Aaruush, A National Level Techno-Management Fest.</p>
                     </div>
                     <div class="experience-item">
                         <h4>Committee Member</h4>
-                        <h5>July,2019-Present</h5>
+                        <h5>July,2019-April,2023</h5>
                         <p><i class="fas fa-caret-right"></i>Rotaract Club SRM</p>
                         <p>An active member of an organizing committee of Rotaract Club SRM.</p>
                     </div>
