--- a/blogs.html
+++ b/blogs.html
@@ -167,6 +167,19 @@
                 <div class="row portfolio-container">
                     <div class="col-lg-4 col-md-6 portfolio-item filter-research">
                         <div class="portfolio-wrap">
+                            <img loading="lazy" src="blogs images/swasthify.png" class="img-fluid" alt="research paper image">
+                            <div class="portfolio-info">
+                                <h4>Swasthify: Health as a service</h4>
+                                <p>Research paper which is published in IEEE, This research paper and project is aimed at ameliorating the hardships people face in availing the health services. The information related to even the basic health services like hospital beds, vaccines, icu beds etc. remain elusive to the end users. </p>
+                                <div class="portfolio-links">
+                                    <a href="blogs images/swasthify.png" data-gall="portfolioGallery" class="venobox" title="Blog"><i class="fas fa-images"></i></a>
+                                    <a href="https://ieeexplore.ieee.org/document/10127352" target="_blank"><i class="fas fa-link"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-research">
+                        <div class="portfolio-wrap">
                             <img loading="lazy" src="blogs images/research.png" class="img-fluid" alt="research paper image">
                             <div class="portfolio-info">
                                 <h4>Network Function Virtualization in the Multi-Tenant Cloud</h4>
